created adapter and strategy service for creation of containers